# smskit

./: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
benches/: simple_performance.rs
config/: default.toml
crates/sms-aws-sns/: Cargo.toml
crates/sms-aws-sns/src/: lib.rs
crates/sms-core/: Cargo.toml
crates/sms-core/src/: lib.rs
crates/sms-plivo/: Cargo.toml  Cargo_old.toml
crates/sms-plivo/src/: lib.rs
crates/sms-twilio/: Cargo.toml
crates/sms-twilio/src/: lib.rs
crates/sms-web-actix/: Cargo.toml
crates/sms-web-actix/src/: lib.rs
crates/sms-web-axum/: Cargo.toml
crates/sms-web-axum/src/: lib.rs
crates/sms-web-generic/: Cargo.toml
crates/sms-web-generic/src/: lib.rs
crates/sms-web-hyper/: Cargo.toml
crates/sms-web-hyper/src/: lib.rs
crates/sms-web-poem/: Cargo.toml
crates/sms-web-poem/src/: lib.rs
crates/sms-web-rocket/: Cargo.toml
crates/sms-web-rocket/src/: lib.rs
crates/sms-web-tide/: Cargo.toml
crates/sms-web-tide/src/: lib.rs
crates/sms-web-warp/: Cargo.toml
crates/sms-web-warp/src/: lib.rs
docs/: API.md
examples/: send_plivo.rs  unified_webhook.rs
examples/frameworks/: actix_server.rs  generic_integration.rs  hyper_server.rs  rocket_server.rs  tide_server.rs  warp_server.rs
src/: config.rs  lib.rs  rate_limit.rs  rate_limiter.rs
tests/: integration_tests.rs
