[package]
name = "sms-core"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Common traits and types for the smskit multi-provider SMS abstraction."
keywords = ["sms", "webhook", "provider", "abstraction"]
categories = ["api-bindings", "web-programming"]
repository = "https://github.com/yourusername/smskit"
homepage = "https://github.com/yourusername/smskit"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
