[package]
name = "sms-core"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Common traits and types for the smskit multi-provider SMS abstraction."
homepage = "https://github.com/ciresnave/smskit"
keywords = ["sms", "webhook", "provider", "abstraction"]
categories = ["api-bindings", "web-programming"]
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
