[package]
name = "sms-plivo"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Plivo backend for smskit."

[features]
default = ["reqwest"]
axum = ["dep:axum"]
reqwest = ["dep:reqwest"]

[dependencies]
sms-core = { version = "0.2.0", path = "../sms-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
serde_urlencoded = "0.7"
# HTTP
reqwest = { version = "0.12", optional = true, features = ["json"] }
# Optional web handler
axum = { version = "0.7", optional = true, default-features = false, features = [
  "http1",
] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
