[package]
name = "sms-web-actix"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Actix-web adapter for smskit SMS webhook processing."

[dependencies]
sms-core = { path = "../sms-core" }
sms-web-generic = { path = "../sms-web-generic" }
actix-web = "4.0"
bytes = "1"
serde_json = "1.0"
