[package]
name = "sms-web-axum"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Axum adapter that exposes a unified webhook endpoint for multiple SMS providers."
homepage = "https://github.com/ciresnave/smskit"
[dependencies]
sms-core = { version = "0.3.0", path = "../sms-core" }
sms-web-generic = { version = "0.3.0", path = "../sms-web-generic" }
axum = "0.8"
bytes = "1"
serde_json = "1.0"
