[package]
name = "sms-web-hyper"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Hyper adapter for smskit SMS webhook processing (raw HTTP)."

[dependencies]
sms-core = { version = "0.2.0", path = "../sms-core" }
sms-web-generic = { path = "../sms-web-generic" }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
bytes = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
