[package]
name = "sms-web-poem"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Poem adapter for smskit SMS webhook processing."

[dependencies]
sms-core = { version = "0.2.0", path = "../sms-core" }
sms-web-generic = { path = "../sms-web-generic" }
poem = "2.0"
bytes = "1"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
