[package]
name = "sms-web-poem"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Poem adapter for smskit SMS webhook processing."
repository = "https://github.com/ciresnave/smskit"
homepage = "https://github.com/ciresnave/smskit"
[dependencies]
sms-core = { version = "0.3.0", path = "../sms-core" }
sms-web-generic = { version = "0.3.0", path = "../sms-web-generic" }
poem = "2.0"
bytes = "1"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
