[package]
name = "sms-web-rocket"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Rocket adapter for smskit SMS webhook processing."
repository = "https://github.com/ciresnave/smskit"
homepage = "https://github.com/ciresnave/smskit"
[dependencies]
sms-core = { version = "0.3.0", path = "../sms-core" }
sms-web-generic = { version = "0.3.0", path = "../sms-web-generic" }
rocket = { version = "0.5", features = ["json"] }
serde_json = "1.0"
