[package]
name = "sms-web-tide"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tide adapter for smskit SMS webhook processing."

[dependencies]
sms-core = { path = "../sms-core" }
sms-web-generic = { path = "../sms-web-generic" }
tide = "0.16"
async-std = { version = "1.12", features = ["attributes"] }
serde_json = "1.0"
