[package]
name = "sms-web-warp"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Warp adapter for smskit SMS webhook processing."

[dependencies]
sms-core = { version = "0.2.0", path = "../sms-core" }
sms-web-generic = { path = "../sms-web-generic" }
warp = { version = "0.4", features = ["server"] }
bytes = "1"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt"] }
